<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMovieActivity">



    <EditText
        android:id="@+id/movieNameEditTextID"
        android:layout_width="342dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nameEditText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionLabelID"
        android:layout_width="112dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/descriptionLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieNameEditTextID" />

    <EditText
        android:id="@+id/movieDescriptionEditTextID"
        android:layout_width="342dp"
        android:layout_height="95dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionLabelID" />

    <TextView
        android:id="@+id/movieGenreLableID"
        android:layout_width="94dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/genreLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDescriptionEditTextID" />

    <Spinner
        android:id="@+id/genreDropDownID"
        android:layout_width="192dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/movieGenreLableID"
        app:layout_constraintTop_toBottomOf="@+id/movieDescriptionEditTextID" />

    <TextView
        android:id="@+id/movieRatingLabelID"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/ratingLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieGenreLableID" />

    <SeekBar
        android:id="@+id/movieRatingSeekBarID"
        android:layout_width="179dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/movieYearEditTextID"
        app:layout_constraintEnd_toStartOf="@+id/textViewPercentId"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/movieRatingLabelID"
        app:layout_constraintTop_toBottomOf="@+id/genreDropDownID"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/movieYearEditTextID"
        android:layout_width="342dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/yearEditText"
        android:textSize="14sp"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieRatingLabelID" />

    <EditText
        android:id="@+id/imdbEditTextID"
        android:layout_width="342dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/imdbEditText"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieYearEditTextID" />

    <Button
        android:id="@+id/saveChangesId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/savechanges"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imdbEditTextID" />

    <TextView
        android:id="@+id/textViewPercentId"
        android:layout_width="38dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/percentage"
        app:layout_constraintBottom_toTopOf="@+id/movieYearEditTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreDropDownID"
        app:layout_constraintVertical_bias="0.136"
        tools:text="@string/percentage" />

</android.support.constraint.ConstraintLayout>